--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,10 @@ categoria.nome=Nome
 pessoa.nome=Nome
 
 pessoa.ativo=Campo Status
+
+lancamento.descricao=Descri\u00E7\u00E3o
+lancamento.dataVencimento=Data de vencimento
+lancamento.valor=Valor
+lancamento.tipo=Tipo
+lancamento.categoria=Categoria
+lancamento.pessoa=Pessoa
