--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,8 +6,8 @@ recurso.operacao-nao-permitida=Opera\u00E7\u00E3o n\u00E3o permitida
 categoria.nome=Nome
 
 pessoa.nome=Nome
-
 pessoa.ativo=Campo Status
+pessoa.inexistente-ou-inativa=Pessoa inexistente ou inativa para incluir no lan\u00E7amento
 
 lancamento.descricao=Descri\u00E7\u00E3o
 lancamento.dataVencimento=Data de vencimento
