--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,15 +1,14 @@
-mensagem.invalida=Mensagem inv\u00E1lida
-
-recurso.nao-encontrado=Recurso n\u00E3o encontrado
-recurso.operacao-nao-permitida=Opera\u00E7\u00E3o n\u00E3o permitida
+mensagem.invalida=Mensagem inválida
+recurso.nao-encontrado=Recurso não encontrado
+recurso.operacao-nao-permitida=Operação não permitida
+pessoa.inexistente-ou-inativa=Pessoa inexistente ou inativa para incluir no lançamento
 
 categoria.nome=Nome
 
 pessoa.nome=Nome
-pessoa.ativo=Campo Status
-pessoa.inexistente-ou-inativa=Pessoa inexistente ou inativa para incluir no lan\u00E7amento
+pessoa.ativo=Ativo
 
-lancamento.descricao=Descri\u00E7\u00E3o
+lancamento.descricao=Descrição
 lancamento.dataVencimento=Data de vencimento
 lancamento.valor=Valor
 lancamento.tipo=Tipo
